# bookbinder

./: .gitignore  AGENTS.md  README.md  SPEC.md  bb  pyproject.toml
.beads/: .gitignore  README.md  config.yaml  metadata.json
bookbinder/: constants.py
bookbinder/imposition/: __init__.py  core.py  pdf_writer.py
bookbinder/web/: __init__.py  app.py
bookbinder/web/static/: styles.css
bookbinder/web/templates/: index.html
constraints/: worker-runtime.txt
docs/: mvp-acceptance-verification.md  mvp-manual-smoke-checklist.md  polished-performance-target.md
docs/agents/: README.md  coordinator-loop.md  handoff-template.md  minimal-worktree-swarm.md  swarm-operator-runbook.md  worker-loop.md
sample-pdfs/expected_output/: manifest.json
scripts/: benchmark_300_page_imposition.py  run-mvp-gates.sh
scripts/orca/: AGENT_PROMPT.md  OPERATOR_GUIDE.md  README.md  agent-loop.sh  audit-consistency.sh  merge-after-run.sh  merge-primary-main.sh  orca-roadmap.md  orca-v2-minimal-plan.md  orca.sh  setup-worktrees.sh  start.sh  status.sh  stop.sh
scripts/orca/agents/: README.md  coordinator-loop.md  minimal-worktree-swarm.md  swarm-operator-runbook.md  task-creation-rules.md  worker-loop.md
scripts/swarm/: agent-loop.sh  orca.sh  setup-worktrees.sh  start.sh  status.sh  stop.sh
tests/: conftest.py
tests/mvp_integration/: test_pipeline.py  test_web_flow.py
tests/mvp_unit/: test_core.py  test_packaging.py  test_pdf_writer.py  test_pdf_writer_positioning.py
tests/polished_integration/: test_options_matrix.py
tests/polished_unit/: test_controls_and_geometry.py
