[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookbinder"
version = "0.1.0"
description = "Folio-only PDF imposition MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "pypdf>=4.0,<6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "uvicorn>=0.35,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bookbinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "mvp_unit: Unit-level MVP logic checks",
  "mvp_integration: Integration-level MVP flow checks",
  "polished_unit: Unit-level polished feature checks",
  "polished_integration: Integration-level polished feature checks",
]
